client/app/styles/main.scss
$icon-font-path: './fonts/'; 
@import '../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap.scss';

body {
  padding-top: 40px;
} 
a {
    cursor: pointer;
        
    &:hover {
        text-decoration: none
    }
}
.fade-out {
    opacity: 0.5;
}
.link-pointer {
    cursor: default;
}
.fixed {
  position: relative;
}
.board {
    margin-top: 20px;
    
    &#backlogboard {
        position: absolute;
        min-width: 99%;
        
        .story-card {
            font-size: 0.8em;
            
            .postit {
                font-size: 1.2em;
            }
        }
    }
}
.nav .dropdown-menu li input {
    display: block;
    padding: 3px 20px;
    clear: both;
    font-weight: normal;
    line-height: 1.428571429;
    color: #333333;
    white-space: nowrap;
}
div.error {
    margin: 20px;
    padding: 10px;
    border: 1px solid #9f0404;
    background-color: #e5a7a7;
    border-radius: 5px;
}

.drag-placeholder {
	background-color: #d8d8d4;
	-moz-border-radius: 4px;
	border-radius: 4px;
	padding: 6px 8px 6px 8px;
    width: 100%;
    min-height: 120px;
    margin-bottom: 25px;
}

.story-card {    
    @extend .div-block;
	background-color: #FFFFE6;
	-moz-border-radius: 4px;
	border-radius: 4px;
	padding:6px 8px 6px 8px;
    box-shadow: 0 0 0 1px #FFFFE6,
        0 0 0 3px #E8E8BF;
    display: block;
    word-wrap: break-word;
    
    &:hover {
        background-color: #FFFFCC;
        box-shadow: 0 0 0 3px #e2e254;
    }
    
    &.closed {
        background-color: #e2e2f7;
        box-shadow: 0 0 0 1px #e2e2f7,
                    0 0 0 3px #cdcdd1;
        
        &:hover {
            background-color: #dfdfe3;
            box-shadow: 0 0 0 3px #bfbcbc;
        }
    }
    
    .story-number {
        font-weight: bold;
        font-size: 1.5em;
        margin-top: 0.8em;
        margin-bottom: 0.3em;
    }

    .story-title {
        font-size: 1.5em;
        margin-top: 0.3em;
        margin-bottom: 0.8em;
    }
    
    .story-point {
        padding: 3px;
        border-radius: 3px;
    }
    
    .glyphicon {
        font-size: 1.5em;
    }
    .backlog-btns .glyphicon {
        font-size: 1.8em;
    }
    &.compact-mode .centered {
        margin-bottom: 25px;
    }
    
    div.story-center:after{
        clear: both;
        content: "";
        display: block;
    }
    footer, div.footer, .story-card div.header {
        text-align: left;
    }
    .progress {
        font-size: 1.2em;
        
        .progress-bar {
            line-height: 2em;
        }
    }
}


.owner-image {
    margin: 0.4em;
    width: 80px;
    min-height: 80px;
    vertical-align: middle;
    text-align: center;
    border-radius: 4px;
    border: solid 1px grey;
    background-image: url("../images/team/unknown.jpg");
    background-size: contain;

    img {
        width: 100%;
    }
}

.postits {
    position: relative;
    left: 50px;
    top: -2em;
    min-height: 1.4em;
    width: 65%;


    .postit {
        border-radius: 2px;
        border: solid 1px grey;
        background-color: #ff60df;
        color: white;
        font: "Comic Sans MS";
        font-size: 1em;
        padding: 3px;
        width: 90px;
        height: 2em;
        vertical-align: middle;
        text-align: center;
        float: left;
        box-shadow: 5px 5px 2px #888888;
        margin-right: 10px;

        &.postit-twolines {
            height: 50px;
        }
    }
}

story-with-tasks > div {
    margin-bottom: 25px;
    &.compact-mode {
        margin-bottom: 0px;
    }
}

.tasks {
    margin-top: 20px;
}

.task-card {
    @extend .div-block;
	background-color: #E0E0F8;
	-moz-border-radius: 4px;
	border-radius: 4px;
	padding: 4px 6px 4px 6px;
    box-shadow: 0 0 0 1px #E0E0F8,
        0 0 0 3px #A9A9F5;
	margin-bottom: 10px;
	font-size: 1.1em;
    
    &:hover {
        background-color: #d4d4ef;
        box-shadow: 0 0 0 3px #8a8aaf;
        cursor: pointer
    }
    
    .add-time {
        color: #696969;
        border-radius: 4px;
        background-color: #c4c4cc;
        padding: 4px;
        margin: -2px 5px;
	    font-size: 0.7em;
        vertical-align: top;
                
        &:hover {
            color: #4e4e4e;
            background-color: #b2b2bc;
            border-color: #4e4e4e;
        }
    }
    .owner-image {
        width: 60px;
        min-height: 60px;        
        margin: 0.2em 0.8em 0.2em 0em;
    }
    .task-title {
        font-weight: bold;
    }
    
    &.compact-mode {
        .task-title {
            font-weight: normal;
        }
    }
    
    .glyphicon {
        font-size: 1em;
    }
}
.div-block {
    height: auto;
    overflow: hidden;
}

.progress {
    position: relative;
    display: inline-block;
    text-align: center;
    background-color: #a0a0a0;
    width: 80px;
    height: 100%;
    margin-bottom: 0px;
	font-size: 0.9em;
    
    div {
        background-color: #7b7979;
        height: 100%;
    }
    span {
        position: absolute;
        display: block;
        width: 100%;
        color: black;
        color: #ffffff;
    }
    &.progress-striped div {
        background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.25) 25%, 
            transparent 25%, transparent 50%, rgba(255, 255, 255, 0.25) 50%, 
            rgba(255, 255, 255, 0.25) 75%, transparent 75%, transparent);
    }
}

.centered {
	text-align: center;
}


.information-text {
	font-style: italic;
    color: grey;
	margin-top: 0.3em;
	margin-bottom: 0.8em;
}


.space-bottom {
	margin-bottom: 1em;
}

.block {
    width: 100%;
    margin: 0px;
    display: inline-block;
    vertical-align: top;
}
.block-fullsize {
    margin-bottom: 30px;
}

.link {
    cursor: pointer;
    color: #428bca;
}

#modal-filter-keywords .modal-dialog {
    font-size: 1.2em;
}

.swimlane {
    min-height: 100px;
    
    @media (max-width: 1500px) and (min-width: 992px) {
        & { width: 33%; }
    }
}

@media (min-width: 1500px) {
    .block {
        width: 49%;
    }
}

@media (max-width: 1200px) {
    .hide-when-small {
        display: none;
    }
}

.row {
    margin: 0px;
}
.slice {
    margin: 5px;
    padding: 0px 5px 0px 5px;
    border-radius: 15px;
    border: solid 1px #d6d6d6;
    display: inline-block;
    white-space: nowrap;
    min-width: 100%;
 
    h2 {
        padding-left: 15px;
    }
    
    .col-project {
        width: 15em;
        display: inline-block;
        margin: 5px;
        white-space: normal;
        vertical-align: top;
        text-align: center;
        
        .project-title {
            font-size: 1.4em;
            padding-bottom: 10px;
        }
        story .postits {
            top: -1.5em;
            margin-bottom: 1em;
        }
    }
}
ul.nav li {    
    .dropdown owner-image img {
        height: 30px;
    }
    &.link a:hover {
        background-color: #e7e7e7;
    }
}
.drag-hide {
    display: none;
}

